# ExperimentingRust

./: .gitignore  README.md
.configs/monteur/setup/jobs/: rust.toml
artwork/original-pieces/: banner-1200x628.xcf  logo-1200x1200.xcf
expRust/: rustfmt.toml
expRust/app/: Cargo.toml  main.rs
expRust/app/training/enum_type/: Cargo.toml
expRust/app/training/generic_type/: Cargo.toml  main.rs
expRust/app/training/hashmap_type/: main.rs
expRust/app/training/io_and_os/: Cargo.toml  poem.txt
expRust/app/training/lifetime/: Cargo.toml  main.rs
expRust/app/training/looping/: Cargo.toml
expRust/app/training/modules_layout/: Cargo.toml  main.rs
expRust/app/training/modules_layout_and_testing/: lib.rs
expRust/app/training/string_type/: main.rs
expRust/training/closure_type/: Cargo.toml  main.rs
expRust/training/concurrency/: Cargo.toml  main.rs
expRust/training/error_type/: Cargo.toml  main.rs
expRust/training/functions/src/: main.rs
expRust/training/hashmap_type/: Cargo.toml
expRust/training/io_and_os/: main.rs
expRust/training/logics/: Cargo.toml
expRust/training/macro_type/: Cargo.toml  main.rs
expRust/training/modules_layout_and_testing/: Cargo.toml
expRust/training/modules_layout_and_testing/back_of_house/: Appetizer.rs  Breakfast.rs
expRust/training/modules_layout_and_testing/garden/: mod.rs  vegetables.rs
expRust/training/string_type/: Cargo.toml
expRust/training/tcp/: Cargo.toml  main.rs
expRust/training/traits_type/: Cargo.toml
expRust/training/unsafe_approach/: Cargo.toml  main.rs
expRust/training/vector_type/: main.rs
(+17 files in other folders)
